<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_inicio" />
    <item
        android:id="@+id/nav_monitoreo"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_monitoreo" />
    <item
        android:id="@+id/nav_control"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_control" />
    <item
        android:id="@+id/nav_historial"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_historial" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_perfil" />
</menu>